@@ -222,7 +222,9 @@ void OPJ_CALLCONV opj_set_default_encoder_parameters(opj_cparameters_t *paramete
 	if(parameters) {
 		memset(parameters, 0, sizeof(opj_cparameters_t));
 		/* default coding parameters */
+		parameters->cp_cinema = OFF; 
 		parameters->numresolution = 6;
+		parameters->cp_rsiz = STD_RSIZ;
 		parameters->cblockw_init = 64;
 		parameters->cblockh_init = 64;
 		parameters->prog_order = LRCP;
